retour ancienne version base

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,8 @@
                 <li><a href="/solutions">💡 Solutions</a></li>
                 <li><a href="/assistant">🤖 Assistant</a></li>
                 <li><a href="/resources">📚 Ressources</a></li>
+                <li><a href="/settings">⚙️ Paramètres</a></li>
+                <li><a href="/benevolat">🤝 Bénévolat</a></li>
             </ul>
         </nav>
     </header>
