--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
                 <li><a href="/resources">📚 Ressources</a></li>
                 <li><a href="/settings">⚙️ Paramètres</a></li>
                 <li><a href="/benevolat">🤝 Bénévolat</a></li>
+                <li><a href="/posture">🏋️ Santé Posturale</a></li>
             </ul>
         </nav>
     </header>
